--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
     <string name="com_auth0_domain">"dev-5jju1y2qxgbshkq7.us.auth0.com"</string>
     <string name="com_auth0_client_id">"RQYd3aBfwlWGNtdzrH9UmdaTHQu50Mfo"</string>
     <string name="menu_home">Chat</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_calls">Calls</string>
 </resources>
