--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="menu_home">Chat</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_calls">Calls</string>
+    <string name="big_text_of_signin">Connect friends <b>easily &amp; quickly</b></string>
 </resources>
